{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 41,
  "lineage": "c4c88d76-5564-fa91-3a9e-da0d0ff7734e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:848417356303:security-group/sg-030d01de0ca00f44a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030d01de0ca00f44a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkinsSG",
            "name_prefix": "",
            "owner_id": "848417356303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins SG"
            },
            "tags_all": {
              "Name": "Jenkins SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-9e47a0f5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexusSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:848417356303:security-group/sg-0a941bae9684fa4fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a941bae9684fa4fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030d01de0ca00f44a"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "nexusSG",
            "name_prefix": "",
            "owner_id": "848417356303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nexus SG"
            },
            "tags_all": {
              "Name": "Nexus SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-9e47a0f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:848417356303:security-group/sg-0c938628a969d20aa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c938628a969d20aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030d01de0ca00f44a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sonarqubeSG",
            "name_prefix": "",
            "owner_id": "848417356303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sonarqube SG"
            },
            "tags_all": {
              "Name": "Sonarqube SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-9e47a0f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkinsToSQ",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3602293500",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-030d01de0ca00f44a",
            "self": false,
            "source_security_group_id": "sg-0c938628a969d20aa",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins_firewall",
            "aws_security_group.sonarqube_sg"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0839f41b4dd59c36c",
            "arn": "arn:aws:ec2:ap-south-1:848417356303:instance/i-0f71a907ada39a2cb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f71a907ada39a2cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecs",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0717fe207762fe820",
            "private_dns": "ip-172-31-46-253.ap-south-1.compute.internal",
            "private_ip": "172.31.46.253",
            "public_dns": "ec2-43-204-25-154.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.25.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9728961ece606fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "jenkinsSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee0ec66",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030d01de0ca00f44a"
            ]
          },
          "dependencies": [
            "module.jenkins.data.aws_ami.jenkins_ami",
            "module.jenkins.data.aws_key_pair.commonKey",
            "module.jenkins.data.template_file.jenkins_usedata",
            "aws_security_group.jenkins_firewall"
          ]
        }
      ]
    },
    {
      "module": "module.nexus",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6615d1e95c98aca",
            "arn": "arn:aws:ec2:ap-south-1:848417356303:instance/i-01f2c50378e7cd480",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f2c50378e7cd480",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ecs",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-031e8107adeb4d31d",
            "private_dns": "ip-172-31-41-21.ap-south-1.compute.internal",
            "private_ip": "172.31.41.21",
            "public_dns": "ec2-13-232-183-203.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.183.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0266f438e973b474e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nexusSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee0ec66",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a941bae9684fa4fb"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_firewall",
            "aws_security_group.nexusSG",
            "module.nexus.data.aws_key_pair.commonKey",
            "module.nexus.data.template_file.nexus_userdata"
          ]
        }
      ]
    },
    {
      "module": "module.sonarqube",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfedf42e63bba657",
            "arn": "arn:aws:ec2:ap-south-1:848417356303:instance/i-044d8f536e9fe54fb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044d8f536e9fe54fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ecs",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-023b29404078427ee",
            "private_dns": "ip-172-31-12-213.ap-south-1.compute.internal",
            "private_ip": "172.31.12.213",
            "public_dns": "ec2-43-204-115-245.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.115.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a4933d85ee920ff9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sonarqubeSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-627b062e",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c938628a969d20aa"
            ]
          },
          "dependencies": [
            "aws_security_group.sonarqube_sg",
            "module.sonarqube.data.aws_key_pair.commonKey",
            "module.sonarqube.data.template_file.nexus_userdata"
          ]
        }
      ]
    }
  ]
}